a demo showing rendering to different locations depending on model state

--- a/user_demo/demo.html
+++ b/user_demo/demo.html
@@ -11,6 +11,8 @@
     <script src="user_demo.js"></script>
   </head>
   <body>
-
+    <div id="login"></div>
+    <hr/>
+    <div id="user_info"></div>
   </body>
 </html>
