start of an area view
This view will let you have an area that can show different sub views depending on the state of a model

--- a/tests/test.html
+++ b/tests/test.html
@@ -9,7 +9,10 @@
     <script src="vendor/underscore.js"></script>
     <script src="vendor/backbone.js"></script>
     <script src="../workflow.js"></script>
+    <script src="../workflow_area.js"></script>
+					 
     <script src="workflow.test.js"></script>
+    <script src="workflow_area.test.js"></script>
   </head>
   <body>
     <h1 id="qunit-header">Lexer Test Suite</h1>
